# azure-pim-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  activate_pim.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/azure_pim_cli/: acrs_primer.py  cache.py  chrome_launcher.py  cli.py  graph_client.py  token_grabber.py
tests/: conftest.py  test_cache.py  test_chrome_launcher.py  test_cli_args.py  test_graph_client.py
