[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azure-pim-cli"
dynamic = ["version"]
description = "Interactive CLI to activate Azure PIM group memberships and approve PIM group requests"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Wessel van der Linden", email = "wesselvdlinden@gmail.com" },
]
keywords = ["azure", "pim", "privileged identity management", "cli", "entra"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "playwright>=1.44",
    "httpx[http2]>=0.27",
    "questionary>=2.0",
    "rich>=13.7",
    "python-dateutil>=2.9",
]

[project.scripts]
pim-activate = "azure_pim_cli.cli:main"

[project.urls]
Homepage = "https://github.com/TheScriptingGuy/azure-pim-cli"
Issues = "https://github.com/TheScriptingGuy/azure-pim-cli/issues"
Changelog = "https://github.com/TheScriptingGuy/azure-pim-cli/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.9",
    "mypy>=1.10",
    "types-python-dateutil>=2.9",
]

[tool.hatch.version]
path = "src/azure_pim_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_pim_cli"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "SIM105",  # allow try/except/pass pattern
    "SIM102",  # allow nested if statements
    "SIM117",  # allow nested with statements (pytest.raises combos)
    "B904",    # allow raise without from inside except (existing code style)
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -p no:anyio"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
